Improve spacing around multichoice qs; prevent clipping

--- a/src/scss/common/questions.scss
+++ b/src/scss/common/questions.scss
@@ -70,6 +70,14 @@ form:has(> .question-component), div.quiz-question-container:has(> .question-com
   }
 }
 
+.multichoice-question {
+  ul > li .multichoice-option div:nth-child(2) .content-value > div > p {
+    margin: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+
 $inline-feedback-size: 20px;
 $inline-feedback-padding: 2px;
 
